--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -67,6 +67,8 @@
         "@teambit/documenter.ui.heading": "^0.0.5",
         "@teambit/documenter.ui.label-list": "^0.0.5",
         "@teambit/documenter.ui.linked-heading": "^0.0.6",
+        "@teambit/documenter.ui.list": "0.0.7",
+        "@teambit/documenter.ui.paragraph": "0.0.7",
         "@teambit/documenter.ui.property-table": "^0.0.7",
         "@teambit/documenter.ui.section": "^0.0.5",
         "@teambit/documenter.ui.separator": "^0.0.5",
@@ -159,6 +161,7 @@
         "react-dom": "^16.13.1",
         "react-error-overlay": "^6.0.7",
         "react-hot-loader": "^4.12.21",
+        "react-json-view": "1.19.1",
         "react-live": "^2.2.2",
         "react-router-dom": "^5.2.0",
         "react-tabs": "^3.1.1",
