--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -17,6 +17,7 @@
         "@apollo/react-hooks": "^3.1.5",
         "@graphql-modules/core": "^0.7.17",
         "@jest/test-result": "26.3.0",
+        "@microsoft/api-extractor": "7.10.4",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.3.2",
         "@pnpm/client": "2.0.4",
         "@pnpm/config": "11.3.0",
