--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -107,6 +107,7 @@
         "case-sensitive-paths-webpack-plugin": "^2.3.0",
         "classnames": "^2.2.6",
         "cleargraph": "^5.4.0",
+        "comment-json": "4.1.0",
         "copy-to-clipboard": "^3.3.1",
         "core-js": "^3.6.5",
         "cors": "^2.8.5",
