--- a/package.json
+++ b/package.json
@@ -238,13 +238,13 @@
     "chai-string": "^1.4.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^5.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
     "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-unicorn": "^12.1.0",
     "gh-release": "^3.5.0",
@@ -260,6 +260,7 @@
     "rewire": "^4.0.1",
     "sinon": "^5.0.7",
     "tar": "^4.4.13",
+    "ts-node": "^9.0.0",
     "type-coverage": "^2.4.2",
     "typescript": "3.8.3",
     "verdaccio": "^4.5.1"
